// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show output from task should have persistent output on task fail with bottom bar false: MjcoXTjPbNRDsgOIbGzvjt7MEaZcmasv-err 1`] = `Array []`;

exports[`show output from task should have persistent output on task fail with bottom bar false: MjcoXTjPbNRDsgOIbGzvjt7MEaZcmasv-exit 1`] = `Array []`;

exports[`show output from task should have persistent output on task fail with bottom bar false: MjcoXTjPbNRDsgOIbGzvjt7MEaZcmasv-out 1`] = `
Array [
  Array [
    "◼ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.
  › I will push an output. [0]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
  › I will push an output. [1]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
  › I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✖ This task will execute.
  › I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✖ This task has failed
  › I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G",
  ],
  Array [
    "✖ This task has failed
  › I will push an output. [2]
",
  ],
]
`;

exports[`show output from task should have persistent output on task fail with bottom bar true: MjcoXTjPbNRDsgOIbGzvjt7MEaZcmasv-err 1`] = `Array []`;

exports[`show output from task should have persistent output on task fail with bottom bar true: MjcoXTjPbNRDsgOIbGzvjt7MEaZcmasv-exit 1`] = `Array []`;

exports[`show output from task should have persistent output on task fail with bottom bar true: MjcoXTjPbNRDsgOIbGzvjt7MEaZcmasv-out 1`] = `
Array [
  Array [
    "◼ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.

› I will push an output. [0]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.

› I will push an output. [1]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.

› I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G✖ This task will execute.

› I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G✖ This task has failed

› I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G",
  ],
  Array [
    "✖ This task has failed

› I will push an output. [2]
",
  ],
]
`;

exports[`show output from task should have persistent output: oYHBlOYGg8juKRkaqigY617eyLbGMuDd-err 1`] = `Array []`;

exports[`show output from task should have persistent output: oYHBlOYGg8juKRkaqigY617eyLbGMuDd-exit 1`] = `Array []`;

exports[`show output from task should have persistent output: oYHBlOYGg8juKRkaqigY617eyLbGMuDd-out 1`] = `
Array [
  Array [
    "◼ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.
  › I will push an output. [0]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
  › I will push an output. [1]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
  › I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
  › I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G",
  ],
  Array [
    "✔ This task will execute.
  › I will push an output. [2]
",
  ],
]
`;

exports[`show output from task should indent long multiline output with persistent output: j7BqsosH97ffW1SQSdkADSm2HnSZQ9nn-err 1`] = `Array []`;

exports[`show output from task should indent long multiline output with persistent output: j7BqsosH97ffW1SQSdkADSm2HnSZQ9nn-exit 1`] = `Array []`;

exports[`show output from task should indent long multiline output with persistent output: j7BqsosH97ffW1SQSdkADSm2HnSZQ9nn-out 1`] = `
Array [
  Array [
    "◼ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.
  › This is along long long long long long long long long long long long long lo
n…
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
  › This is along long long long long long long long long long long long long lo
n…
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G",
  ],
  Array [
    "✔ This task will execute.
  › This is along long long long long long long long long long long long long lon…
",
  ],
]
`;

exports[`show output from task should limit output to bottom bar persistently: d4wXg4yGYak09qivTqgKFZaQJ3PvDZm5-err 1`] = `Array []`;

exports[`show output from task should limit output to bottom bar persistently: d4wXg4yGYak09qivTqgKFZaQJ3PvDZm5-exit 1`] = `Array []`;

exports[`show output from task should limit output to bottom bar persistently: d4wXg4yGYak09qivTqgKFZaQJ3PvDZm5-out 1`] = `
Array [
  Array [
    "◼ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.

› I will push an output. [0]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.

› I will push an output. [0]
› I will push an output. [1]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.

› I will push an output. [1]
› I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G",
  ],
  Array [
    "✔ This task will execute.
",
  ],
]
`;

exports[`show output from task should output to bottom bar 2 times at most and delete the prior tasks output when finished: NpGb4ry8b6hlK7VkJ1YcXcVibx0k5Sus-err 1`] = `Array []`;

exports[`show output from task should output to bottom bar 2 times at most and delete the prior tasks output when finished: NpGb4ry8b6hlK7VkJ1YcXcVibx0k5Sus-exit 1`] = `Array []`;

exports[`show output from task should output to bottom bar 2 times at most and delete the prior tasks output when finished: NpGb4ry8b6hlK7VkJ1YcXcVibx0k5Sus-out 1`] = `
Array [
  Array [
    "◼ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G◼ This task will execute.
◼ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will execute.

› I will push an output. [0]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will execute.

› I will push an output. [1]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will execute.

› I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
◼ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will execute.

› I will push an output. [0]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will execute.

› I will push an output. [1]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will execute.

› I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
✔ This task will execute.

› I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G",
  ],
  Array [
    "✔ This task will execute.
✔ This task will execute.

› I will push an output. [2]
",
  ],
]
`;

exports[`show output from task should output to bottom bar from task with no title persistently: iI52S3WPytorU9EZKPar2AiBrLAZTVut-err 1`] = `Array []`;

exports[`show output from task should output to bottom bar from task with no title persistently: iI52S3WPytorU9EZKPar2AiBrLAZTVut-exit 1`] = `Array []`;

exports[`show output from task should output to bottom bar from task with no title persistently: iI52S3WPytorU9EZKPar2AiBrLAZTVut-out 1`] = `
Array [
  Array [
    "
",
  ],
  Array [
    "[2K[1A[2K[G› I will push an output. [0]
",
  ],
  Array [
    "[2K[1A[2K[G› I will push an output. [0]
› I will push an output. [1]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G› I will push an output. [0]
› I will push an output. [1]
› I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G",
  ],
  Array [
    "› I will push an output. [0]
› I will push an output. [1]
› I will push an output. [2]
",
  ],
]
`;

exports[`show output from task should output to bottom bar from task with no title: JMCRBo4OtLm7JB3XbcYoRcCdQRiKfPdP-err 1`] = `Array []`;

exports[`show output from task should output to bottom bar from task with no title: JMCRBo4OtLm7JB3XbcYoRcCdQRiKfPdP-exit 1`] = `Array []`;

exports[`show output from task should output to bottom bar from task with no title: JMCRBo4OtLm7JB3XbcYoRcCdQRiKfPdP-out 1`] = `
Array [
  Array [
    "
",
  ],
  Array [
    "[2K[1A[2K[G› I will push an output. [0]
",
  ],
  Array [
    "[2K[1A[2K[G› I will push an output. [0]
› I will push an output. [1]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G› I will push an output. [0]
› I will push an output. [1]
› I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G
",
  ],
  Array [
    "[2K[1A[2K[G",
  ],
  Array [
    "
",
  ],
]
`;

exports[`show output from task should output to bottom bar persistently: HhZEM7noGNW4xpgxv4ZtXsPMroPWqrEA-err 1`] = `Array []`;

exports[`show output from task should output to bottom bar persistently: HhZEM7noGNW4xpgxv4ZtXsPMroPWqrEA-exit 1`] = `Array []`;

exports[`show output from task should output to bottom bar persistently: HhZEM7noGNW4xpgxv4ZtXsPMroPWqrEA-out 1`] = `
Array [
  Array [
    "◼ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.

› I will push an output. [0]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.

› I will push an output. [0]
› I will push an output. [1]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.

› I will push an output. [0]
› I will push an output. [1]
› I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.

› I will push an output. [0]
› I will push an output. [1]
› I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G",
  ],
  Array [
    "✔ This task will execute.

› I will push an output. [0]
› I will push an output. [1]
› I will push an output. [2]
",
  ],
]
`;

exports[`show output from task should output to bottom bar: 767BkeBTfR1lrS2ANYYH7CLWPATxqyat-err 1`] = `Array []`;

exports[`show output from task should output to bottom bar: 767BkeBTfR1lrS2ANYYH7CLWPATxqyat-exit 1`] = `Array []`;

exports[`show output from task should output to bottom bar: 767BkeBTfR1lrS2ANYYH7CLWPATxqyat-out 1`] = `
Array [
  Array [
    "◼ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.

› I will push an output. [0]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.

› I will push an output. [0]
› I will push an output. [1]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.

› I will push an output. [0]
› I will push an output. [1]
› I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G",
  ],
  Array [
    "✔ This task will execute.
",
  ],
]
`;

exports[`show output from task should output to from an observable: SM8IHVdptzrFs7Qk2bseYbdCwtTf03QT-err 1`] = `Array []`;

exports[`show output from task should output to from an observable: SM8IHVdptzrFs7Qk2bseYbdCwtTf03QT-exit 1`] = `Array []`;

exports[`show output from task should output to from an observable: SM8IHVdptzrFs7Qk2bseYbdCwtTf03QT-out 1`] = `
Array [
  Array [
    "◼ Observable test.
",
  ],
  Array [
    "[2K[1A[2K[G❯ Observable test.
",
  ],
  Array [
    "[2K[1A[2K[G❯ Observable test.
  › test
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ Observable test.
  › changed
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ Observable test.
",
  ],
  Array [
    "[2K[1A[2K[G",
  ],
  Array [
    "✔ Observable test.
",
  ],
]
`;

exports[`show output from task should yield example output: rMG224TBrLk3ocYtKidc1D4AyZtEHm11-err 1`] = `Array []`;

exports[`show output from task should yield example output: rMG224TBrLk3ocYtKidc1D4AyZtEHm11-exit 1`] = `Array []`;

exports[`show output from task should yield example output: rMG224TBrLk3ocYtKidc1D4AyZtEHm11-out 1`] = `
Array [
  Array [
    "◼ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.
  › I will push an output. [0]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
  › I will push an output. [1]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
  › I will push an output. [2]
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
",
  ],
  Array [
    "[2K[1A[2K[G",
  ],
  Array [
    "✔ This task will execute.
",
  ],
]
`;
